k8s/backend-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: forge-backend-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2

spec:
  ingressClassName: nginx

  rules:
    - http:
        paths:
          - path: /api(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: forge-backend
                port:
                  number: 8080
