k8s/frontend-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: forge-frontend-ingress

spec:
  ingressClassName: nginx

  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: forge-frontend
                port:
                  number: 80
